# mittens

./: .gitattributes  .gitignore  .md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dependency-graph.json  scene.json  scene_xr.json
.github/: copilot-instructions.md
assets/: convert_images_to_dds  prepare_assets
assets/components/: animated.mms  asset_item.mms  asset_module_header.mms  assets.mms  assets_content.mms  button.mms  icons.mms  inspector-panel.mms  inspector_details.mms  inspector_panel.mms  paint_panel.mms  paint_panel_item.mms  panel_items.mms  panels.mms  primitives.mms  tripod_light.mms  world-panel.mms  world_panel.mms  world_panel_content.mms  world_panel_status.mms
assets/data/: world-2.mms  world.mms  world_old.mms  world_old_2.mms
assets/models/: color-cat.2.glb
assets/scenes/: vr-input.mms
assets/shaders/: compile-shaders  emissive-toon-mesh.frag  grid-square.frag  grid.vert  mirror-mesh.frag  mirror-mesh.vert  post-process-bloom-blur.frag  post-process-bloom-composite.frag  post-process-copy.frag  post-process-fullscreen.vert  skinned-toon-mesh.vert  skinned-toon-mesh.xr.vert  toon-mesh.frag  toon-mesh.vert  toon-mesh.xr.frag  toon-mesh.xr.vert  unlit-mesh.vert
assets/textures/: cat-face-amused.dds  cat-face-intense.dds  cat-face-neutral.dds  font.dds  font_system.dds  test.font_system.dds
assets/world/: default.mms
crates/meow-meow-script/: Cargo.toml  README.md
crates/mittens-query/: Cargo.toml  README.md
data/: .gitkeep
docs/: CLAUDE.md  bvh-and-raycast.md  editor+general-gizmos.md  editor.md  events.md  gesture-refactor.md  gestures-and-gizmos-4.md  gestures-and-gizmos.md  gizmo-and-gestures-2.md  gizmo-and-gestures-3.md  input-intent-data-flow.md  intent-change-eventworld.md  mesh.md  render-phases.md  screen-space-gizmo-drag.md  signal-emitter.md  signals.md  skinned-toon-mesh.md  topology-events-and-derived-indexes.md  vr-input.md
docs/analysis/: VK_KHR_multiview.md  actions-and-l1-l2-intent.md  avatar-control-pipeline.md  avatar-control-timing.md  avatar-control-verification.md  cameraxr-avatar-alignment.md  command-queue-audit.md  commandqueue-signals-design.md  commands-vs-signals.md  component-ref-relative-scope-use-cases.md  data-event-signal-for-horizontal-component-communication.md  dead-code.md  edit-error.md  editor-cursor-surface-placement-and-grid-authoring.md  editor-panel-order.ms  editor-slot-projection-and-mount-points.md  gizmo-target-topology.md  gizmo-transform-propagation.md  (+41 more)
examples/: 0-3-mindmap-example.rs  0_4-mindmap-example.rs  animation-example.rs  animation-for-topology.rs  array-access.mms  audio-clip-instance-demo.mms  audio-clip-instance-demo.rs  audio-graph-example.rs  audio-music-context-demo.mms  audio-music-context-demo.rs  audio-music-demo.mms  audio-music-demo.rs  background-example.rs  background-occlusion-example.rs  bisket-bones-and-ik.mms  bisket-bones-and-ik.rs  bisket-desktop-demo.mms  bisket-desktop-demo.rs  bisket-vr-debug.mms  bisket-vr-debug.rs  bisket-vr-demo.mms  bisket-vr-demo.rs  bisket-vr-only-example.mms  bisket-vr-only-example.rs  bloom.mms  bloom.rs  button-press.rs  camera-constraint.mms  camera-constraint.rs  camera-toggle.mms  camera-toggle.rs  clip-shape.mms  clip-shape.rs  collision-perimeter.rs  component-method-call.mms  component-method-call.rs  diy-panel.mms  diy-panel.rs  example_util.rs  fit-bounds-demo.mms  (+97 more)
scripts/: download-model-assets.sh
src/: documentation_tests.rs  example.rs  example_support.rs  lib.rs  main.rs  notes.md
tests/: editor_visualization_transform_regressions.rs
(+805 files in other folders)
