[package]
name = "cat-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rspirv = "0.12"

vulkano = "0.35"
vulkano-shaders = "0.35"
vulkano-util = "0.35"
ash = "0.38"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
openxr = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "blocking"] }
tiny_http = "0.12"
winit = "0.30"
slotmap = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
ddsfile = "0.5"

smallvec = "1"

# Lock-free SPSC queue (GUI thread -> audio callback)
heapless = "0.8"

# Heap-allocated lock-free SPSC ring buffer (GUI thread -> audio callback)
rtrb = "0.3"

# DSP backend
fundsp = "0.20"

# Audio output + audio-clock driver
cpal = "0.15"

# PCM decoding (WAV, OGG Vorbis, FLAC, MP3; Opus via the `opus` feature)
symphonia = { version = "0.5", default-features = false, features = [
    "wav", "pcm", "vorbis", "ogg", "flac", "mp3"
] }

# Spatial acceleration structures (ray/AABB + BVH)
bvh = "0.7"

# glTF 2.0 import (used by GLTFSystem to load .glb models and embedded images)
gltf = { version = "1", features = ["import"] }

[[example]]
name = "panel-pierce"
path = "examples/triage/panel-pierce.rs"
