[workspace]
members = ["crates/meow-meow-script", "crates/mittens-query"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Rei Evans <ultr7a@gmail.com>"]
repository = "https://github.com/rei-kurzweil/cat-engine"

[package]
name = "mittens-engine"
version = "0.6.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "A Vulkan and OpenXR scene engine with ECS, reactive signals, and Meow Meow scripting"
exclude = [
    "assets/models/*.glb",
    "docs/.debug/**",
    "docs/analysis/**",
    "docs/bugs/**",
    "docs/draft/**",
    "docs/review/**",
    "docs/task/**",
]

[[bin]]
name = "mittens-engine"
path = "src/main.rs"

[dependencies]
meow-meow-script = { path = "crates/meow-meow-script", version = "0.6.0" }
mittens-query = { path = "crates/mittens-query", version = "0.6.0" }
rspirv = "0.12"

vulkano = "0.35"
vulkano-shaders = "0.35"
vulkano-util = "0.35"
ash = "0.38"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
openxr = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "blocking"] }
tiny_http = "0.12"
winit = "0.30"
slotmap = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
ddsfile = "0.5"

smallvec = "1"

# Lock-free SPSC queue (GUI thread -> audio callback)
heapless = "0.8"

# Heap-allocated lock-free SPSC ring buffer (GUI thread -> audio callback)
rtrb = "0.3"

# DSP backend
fundsp = "0.20"

# Audio output + audio-clock driver
cpal = "0.15"

# PCM decoding (WAV, OGG Vorbis, FLAC, MP3; Opus via the `opus` feature)
symphonia = { version = "0.5", default-features = false, features = [
    "wav", "pcm", "vorbis", "ogg", "flac", "mp3"
] }

# Spatial acceleration structures (ray/AABB + BVH)
bvh = "0.7"

# glTF 2.0 import (used by GLTFSystem to load .glb models and embedded images)
gltf = { version = "1", features = ["import"] }

[[example]]
name = "panel-pierce"
path = "examples/triage/panel-pierce.rs"
